--- a/public/view/home.html
+++ b/public/view/home.html
@@ -7,9 +7,9 @@
 </ul>
 
 <div class="container my-3">
-    <div class="row">
-        <div class="col-md-4 rounded">
-            <form class="col-md pt-5 pb-3 rounded border shadow text-center">
+    <div class="row my-5">
+        <div class="col-md-4  mx-auto rounded">
+            <form class="col-md pt-5 pb-3 px-4 rounded border shadow text-center">
                 <div class="form-group">
                     <img class="card-img-top p-5" ngf-src="file || 'https://image.flaticon.com/icons/png/512/281/281764.png'"
                         alt="Image">
